tests/paczka1/fuzzy1/20247216.err
Error in line 1: g80XD1Xlo A39 19,5
Error in line 3: eEhrCgLaa7 S577 17,7
Error in line 11: tek S577 11,3
Error in line 12: S577 A397 71,0
Error in line 19: tek A397 77,8
Error in line 23: RGzD9 S542 3,0
